[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Players.gd" type="Script" id=3]
[ext_resource path="res://Player1.gd" type="Script" id=4]
[ext_resource path="res://Player2.gd" type="Script" id=5]
[ext_resource path="res://Player3.gd" type="Script" id=6]
[ext_resource path="res://Player4.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="ButtonGroup" id=2]

[node name="Node" type="Node"]

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player1" type="KinematicBody2D" parent="Players"]
position = Vector2( 250, 200 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Players/Player1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player1"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Players/Player1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 37.0
margin_right = 25.5
margin_bottom = 51.0
text = "Player 1"

[node name="Player2" type="KinematicBody2D" parent="Players"]
position = Vector2( 1030, 200 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Players/Player2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player2"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Players/Player2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 37.0
margin_right = 25.5
margin_bottom = 51.0
text = "Player 2"

[node name="Player3" type="KinematicBody2D" parent="Players"]
position = Vector2( 250, 520 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Players/Player3"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player3"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Players/Player3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 37.0
margin_right = 25.5
margin_bottom = 51.0
text = "Player 3"

[node name="Player4" type="KinematicBody2D" parent="Players"]
position = Vector2( 1030, 520 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Players/Player4"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player4"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Players/Player4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.5
margin_top = 37.0
margin_right = 25.5
margin_bottom = 51.0
text = "Player 4"

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.5
margin_top = 15.0
margin_right = 48.5
margin_bottom = 29.0
text = "Select a Player:"

[node name="PlayerSelection" type="HBoxContainer" parent="HUD"]
anchor_right = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckBox1" type="CheckBox" parent="HUD/PlayerSelection"]
margin_right = 292.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
group = SubResource( 2 )
text = "Player1"

[node name="Label" type="Label" parent="HUD/PlayerSelection/CheckBox1"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 8.0
margin_right = 137.0
margin_bottom = 73.0
text = "W: Move Forward
S: Move Backward
A: Move Left
D: Move Right"

[node name="CheckBox2" type="CheckBox" parent="HUD/PlayerSelection"]
margin_left = 296.0
margin_right = 588.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
text = "Player2"

[node name="Label" type="Label" parent="HUD/PlayerSelection/CheckBox2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 8.0
margin_right = 139.0
margin_bottom = 73.0
text = "I: Move Forward
K: Move Backward
J: Rotate Left
L: Rotate Right"

[node name="CheckBox3" type="CheckBox" parent="HUD/PlayerSelection"]
margin_left = 592.0
margin_right = 884.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
text = "Player3"

[node name="Label" type="Label" parent="HUD/PlayerSelection/CheckBox3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 73.0
text = "Mouse LookAt: Rotate
Arrow Up: Move Towards
Arrow Down: Move Backward"

[node name="CheckBox4" type="CheckBox" parent="HUD/PlayerSelection"]
margin_left = 888.0
margin_right = 1180.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = SubResource( 2 )
text = "Player4"

[node name="Label" type="Label" parent="HUD/PlayerSelection/CheckBox4"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 10.0
margin_right = 205.0
margin_bottom = 75.0
text = "Mouse Click: Move To Target"
